--- a/source/index.html
+++ b/source/index.html
@@ -47,13 +47,13 @@
   <main class="page-main">
     <h1 class="visually-hidden">Пинк - сайт мобильного приложения</h1>
     <section class="page-main__intro page-intro">
-      <div class="page-intro__wrapper-picture-and-button container">
+      <div class="page-intro__wrapper-picture-and-button">
         <picture class="page-intro__picture">
           <source media="(min-width: 960px)" srcset="../img/iphone-hand-desktop@1x.png">
           <source media="(min-width: 660px)" srcset="../img/iphone-hand-tablet@1x.png">
           <img class="page-intro__picture-hand" src="../img/iphone-hand-mobile@1x.png" alt="Фотография руки с телефоном">
         </picture>
-        <div class="page-intro__wrapper">
+        <div class="page-intro__wrapper container">
           <h2 class="page-intro__header page-intro__header--index">Взгляните на жизнь иначе!</h2>
           <a class="button page-intro__button" href="#">Скачать приложение</a>
           <ul class="page-intro__list available-list">
@@ -277,7 +277,7 @@
       <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.084044706823!2d30.31965248853345!3d59.93974130023607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1541420177181"></iframe>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer container">
     <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="147px" height="40px" alt="картинка очков пинк">
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
