--- a/source/form.html
+++ b/source/form.html
@@ -46,7 +46,7 @@
       <nav class="main-nav main-nav--nojs">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list main-nav__list--open">
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--border">
               <a class="site-list__link site-list__link--active" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
@@ -85,8 +85,8 @@
             </div>
           </fieldset>
         </div>
-        <div class="contest__fieldset-wrapper contest__fieldset-wrapper--journey">
-          <fieldset class="contest__fieldset contest__fieldset--journey container">
+        <div class="contest__fieldset-wrapper contest__fieldset-wrapper--journey container">
+          <fieldset class="contest__fieldset contest__fieldset--journey">
             <legend class="contest__legend">Ваши безбашенные достижения в путешествии</legend>
             <ul class="contest__list">
               <li class="contest__list-item contest__list-item--shark">
@@ -110,8 +110,8 @@
             </ul>
           </fieldset>
         </div>
-        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--information">
-          <fieldset class="contest__fieldset contest__fieldset--information container">
+        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--information container">
+          <fieldset class="contest__fieldset contest__fieldset--information">
             <legend class="contest__legend contest__legend--information">Контактная информация</legend>
             <div class="contest__item-wrapper">
               <div class="contest__item contest__item--number">
@@ -142,7 +142,7 @@
             </div>
           </fieldset>
         </div>
-        <div class="contest__fieldset-wrapper contest__fieldset-wrapper--application">
+        <div class="contest__fieldset-wrapper contest__fieldset-wrapper--application container">
           <fieldset class="contest__fieldset contest__fieldset--application">
             <legend class="contest__legend">С каким приложением путешествовали?</legend>
             <ul class="contest__list">
@@ -158,13 +158,13 @@
             </ul>
           </fieldset>
         </div>
-        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--emotion">
-          <fieldset class="contest__fieldset contest__fieldset--emotion container">
+        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--emotion container">
+          <fieldset class="contest__fieldset contest__fieldset--emotion">
             <legend class="contest__legend">Опишите свои эмоции</legend>
             <textarea class="contest__textarea" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
         </div>
-        <div class="contest__submit">
+        <div class="contest__submit container">
           <button class="contest__button button-form" type="submit">Отправить форму</button>
           <p class="contest__explain"><sup class="contest__explain--star">*</sup> — обязательные поля</p>
         </div>
