--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
       <nav class="main-nav main-nav--nojs">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list main-nav__list--open">
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--border">
               <a class="site-list__link site-list__link--active">Главная</a>
             </li>
             <li class="site-list__item">
