--- a/source/photo.html
+++ b/source/photo.html
@@ -46,7 +46,7 @@
       <nav class="main-nav main-nav--nojs">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list main-nav__list--open">
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--border">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
@@ -69,7 +69,7 @@
       <h1 class="page-main__description">Фотографии Пользователей</h1>
     </section>
     <section class="page-main__photo photo">
-      <h2 class="photo__description description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h2>
+      <h2 class="photo__description description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
       <div class="photo__panorama panorama">
         <picture class="panorama__picture-wrapper">
           <source type="../image/webp" media="(min-width: 960px)" srcset="../img/panorama-desktop@1x.webp 1x, ../img/panorama-desktop@2x.webp 2x">
