--- a/source/form.html
+++ b/source/form.html
@@ -59,13 +59,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--border">
-              <a class="site-list__link site-list__link--active">Главная</a>
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Конкурс</a>
+              <a class="site-list__link site-list__link--active">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="#">HTML Academy</a>
@@ -78,29 +78,29 @@
   </header>
   <main class="page-main">
     <section class="page-main__info">
-      <h1 class="page-main__description">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <h1 class="page-main__description page-main__description--form">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </section>
     <section class="page-main__contest contest">
       <div class="contest__info">
         <h6 class="contest__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!<span class="contest__filled-form"> Пожалуйста, заполните форму ниже:</span></h6>
       </div>
       <form class="contest__form" action="https://echo.htmlacademy.ru" method="post">
-        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--name">
+        <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--name container">
           <fieldset class="contest__fieldset contest__fieldset--name">
             <div class="contest__list">
               <div class="contest__item"><label class="contest__label-item" for="surname">Фамилия:</label>
-                <input class="contest__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию*"></div>
-              <div class="contest__item"><label class="contest__label-item" for="name">Имя:</label>
-                <input class="contest__input" type="text" name="name" id="name" placeholder="Введите ваше имя*"></div>
+                <input class="contest__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию *"></div>
+              <div class="contest__item contest__item--name"><label class="contest__label-item" for="name">Имя:</label>
+                <input class="contest__input" type="text" name="name" id="name" placeholder="Введите ваше имя *"></div>
               <div class="contest__item"><label class="contest__label-item" for="middle-name">Отчество:</label>
-                <input class="contest__input" type="text" name="middle-name" id="middle-name" placeholder="Ну и отчество тоже*"></div>
+                <input class="contest__input" type="text" name="middle-name" id="middle-name" placeholder="Ну и отчество тоже *"></div>
             </div>
           </fieldset>
         </div>
         <div class="contest__fieldset-wrapper contest__fieldset-wrapper--journey container">
           <fieldset class="contest__fieldset contest__fieldset--journey">
             <legend class="contest__legend">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="contest__list">
+            <ul class="contest__list contest__list--journey">
               <li class="contest__list-item contest__list-item--shark">
                 <input class="contest__checkbox" type="checkbox" name="selfi" id="selfi" checked="">
                 <label class="contest__label" for="selfi">Сделал селфи с акулой</label></li>
@@ -112,13 +112,13 @@
                 <label class="contest__label" for="chack">Видел Чака Норриса</label></li>
               <li class="contest__list-item">
                 <input class="contest__checkbox contest__list-item--souvenir" type="checkbox" name="buy" id="buy">
-                <label class="contest__label" for="buy">Накупил сувениров</label></li>
-              <li class="contest__list-item">
-                <input class="contest__checkbox contest__list-item--turret" type="checkbox" name="turret" id="turret" checked="">
-                <label class="contest__label" for="turret">Удержал башню</label></li>
+                <label class="contest__label contest__label--inner" for="buy">Накупил сувениров</label></li>
+              <li class="contest__list-item contest__list-item--turret">
+                <input class="contest__checkbox" type="checkbox" name="turret" id="turret" checked="">
+                <label class="contest__label contest__label--inner" for="turret">Удержал башню</label></li>
               <li class="contest__list-item contest__list-item--hotel">
                 <input class="contest__checkbox" type="checkbox" name="hotel" id="hotel">
-                <label class="contest__label" for="hotel">Разгромил отель</label></li>
+                <label class="contest__label contest__label--inner contest__label--hotel" for="hotel">Разгромил отель</label></li>
             </ul>
           </fieldset>
         </div>
@@ -127,17 +127,17 @@
             <legend class="contest__legend contest__legend--information">Контактная информация</legend>
             <div class="contest__item-wrapper">
               <div class="contest__item contest__item--number">
-                <label class="contest__label-item" for="phone">Номер телефона</label>
+                <label class="contest__label-item contest__label-item--information" for="phone">Номер телефона</label>
                 <input class="contest__input" id="phone" type="text" placeholder="Номер, пожалуйста">
                 <span class="contest__svg-wrapper"><svg class="contest__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.697px" height="19.696px" viewBox="0 0 19.697 19.696" enable-background="new 0 0 19.697 19.696" xml:space="preserve">
                     <path d="M9.848,0C6.34,0,2.823,0.628,1.546,1.878c-1.058,1.04-1.412,2.874-1.53,4.035c0,0-0.016,0.115-0.016,0.165 c0,0.454,0.369,0.82,0.819,0.82c0.054,0,2.028-0.161,3.218-0.259c0.029-0.004,0.058-0.008,0.086-0.017 C4.566,6.61,4.924,6.25,4.924,5.803l0.003-1.617c0-0.5,0.407-0.902,0.907-0.902h8.027c0.499,0,0.907,0.402,0.907,0.902l0.003,1.617 c0,0.447,0.356,0.808,0.802,0.82c0.027,0.009,0.056,0.013,0.085,0.017c1.19,0.098,3.164,0.259,3.217,0.259 c0.451,0,0.822-0.366,0.822-0.82c0-0.05-0.018-0.165-0.018-0.165c-0.118-1.161-0.472-2.995-1.53-4.035 C16.873,0.628,13.356,0,9.848,0z M9.848,10.67c-0.908,0-1.643,0.733-1.643,1.64c0,0.907,0.734,1.641,1.643,1.641 c0.906,0,1.641-0.733,1.641-1.641C11.488,11.404,10.754,10.67,9.848,10.67z M8.616,6.975V5.951c0-0.567-0.46-1.026-1.025-1.026 c-0.566,0-1.024,0.459-1.024,1.026v1.024l-5.537,5.913c-0.382,0.376-0.619,0.894-0.619,1.47v1.646c0,0.907,0.734,1.643,1.641,1.643 h0.411v1.023c0,0.568,0.46,1.026,1.026,1.026c0.565,0,1.024-0.458,1.024-1.026v-1.023h10.669v1.023c0,0.568,0.46,1.026,1.025,1.026 c0.567,0,1.026-0.458,1.026-1.026v-1.023h0.411c0.905,0,1.64-0.735,1.64-1.643v-1.646c0-0.576-0.236-1.094-0.618-1.47L13.13,6.975 V5.951c0-0.567-0.459-1.026-1.024-1.026c-0.567,0-1.027,0.459-1.027,1.026v1.024H8.616z M9.848,9.028 c1.814,0,3.282,1.468,3.282,3.282s-1.468,3.282-3.282,3.282c-1.813,0-3.281-1.468-3.281-3.282S8.034,9.028,9.848,9.028z" />
                   </svg>
                 </span>
               </div>
-              <div class="contest__item contest__item--number">
-                <label class="contest__label-item" for="email">Адрес почты</label>
-                <input class="contest__input" id="email" type="text" placeholder="Введите почту*">
-                <span class="contest__svg-wrapper"><svg class="contest__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.988px" height="13.966px" viewBox="0 0 17.988 13.966" enable-background="new 0 0 17.988 13.966" xml:space="preserve">
+              <div class="contest__item contest__item--email">
+                <label class="contest__label-item contest__label-item--information" for="email">Адрес почты</label>
+                <input class="contest__input contest__input--email" id="email" type="text" placeholder="Введите почту *">
+                <span class="contest__svg-wrapper contest__svg-wrapper--email"><svg class="contest__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.988px" height="13.966px" viewBox="0 0 17.988 13.966" enable-background="new 0 0 17.988 13.966" xml:space="preserve">
                     <g>
                       <g>
                         <g>
@@ -156,8 +156,8 @@
         </div>
         <div class="contest__fieldset-wrapper contest__fieldset-wrapper--application container">
           <fieldset class="contest__fieldset contest__fieldset--application">
-            <legend class="contest__legend">С каким приложением путешествовали?</legend>
-            <ul class="contest__list">
+            <legend class="contest__legend contest__legend--application">С каким приложением путешествовали?</legend>
+            <ul class="contest__list contest__list--application">
               <li class="contest__item contest__item--radio">
                 <input class="contest__radio" type="radio" name="journey" id="ios" value="ios" checked="">
                 <label class="contest__label contest__label--radio" for="ios">Pink для iOS</label></li>
@@ -172,7 +172,7 @@
         </div>
         <div class="contest__fieldset-wrapper-nogrey contest__fieldset-wrapper--emotion container">
           <fieldset class="contest__fieldset contest__fieldset--emotion">
-            <legend class="contest__legend">Опишите свои эмоции</legend>
+            <legend class="contest__legend contest__legend--emotion">Опишите свои эмоции</legend>
             <textarea class="contest__textarea" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
         </div>
@@ -217,7 +217,7 @@
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
         <a class="social-list__link social-list__link--twitter" href="#" aria-label="Твиттер">
-          <svg class="social-list__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+          <svg class="social-list__svg social-list__svg--twitter" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
             <g id="W6EeEF_1_">
               <g>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.485,3.074,0.263,3.685,1.151 c0.694-0.226,1.372-0.47,2.072-0.691c-0.004,0.841-0.538,1.478-0.883,1.727C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.976-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.32,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.654,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.787,11.283,0.153z" />
@@ -277,12 +277,15 @@ console.log('mainNavToggle', mainNavToggle);
 
 pageHeader.classList.remove('page-header--nojs');
 mainNav.classList.remove('main-nav--nojs');
+mainNavToggle.classList.remove('main-nav__toggle--nojs');
 
 mainNavToggle.addEventListener('click', function(e) {
   e.preventDefault();
+  pageHeader.classList.toggle('page-header--open');
   mainNav.classList.toggle('main-nav--open');
   mainNavToggle.classList.toggle('main-nav__toggle--open');
 });
+
 
 </script>
 
