--- a/source/photo.html
+++ b/source/photo.html
@@ -59,10 +59,10 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--border">
-              <a class="site-list__link site-list__link--active">Главная</a>
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="photo.html">Фотографии</a>
+              <a class="site-list__link site-list__link--active">Фотографии</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="form.html">Конкурс</a>
@@ -198,10 +198,10 @@
             <div class="photo__wrapper">
               <div class="photo__username-wrapper">
                 <p class="photo__username">Сергей</p>
-                <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(25 часов назад)</p>
+                <p class="photo__activity photo__activity--sergey"><span class="visually-hidden">Последняя активность</span>(25 часов назад)</p>
               </div>
               <p class="photo__comment">Самая кубанская в мире!</p>
-              <div class="photo__but-like">
+              <div class="photo__but-like photo__but-like--sergey">
                 <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                     <g>
                       <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
@@ -248,10 +248,10 @@
             <div class="photo__wrapper">
               <div class="photo__username-wrapper">
                 <p class="photo__username">Надежда</p>
-                <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(45 часов назад)</p>
+                <p class="photo__activity photo__activity--nadya"><span class="visually-hidden">Последняя активность</span>(45 часов назад)</p>
               </div>
               <p class="photo__comment">Всем GM и взаимные лайки!</p>
-              <div class="photo__but-like">
+              <div class="photo__but-like photo__but-like--nadya">
                 <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                     <g>
                       <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
@@ -267,10 +267,10 @@
     <section class="page-main-editor editor">
       <h2 class="visually-hidden">Редактирование фото</h2>
       <div class="container">
-        <p class="editor__description description">Затмите их всех! <br> Выкладывайте всё, что накопилось в телефоне!</p>
+        <p class="editor__description description"><span class="editor__description--one"> Затмите их всех!</span> <br> <span class="editor__description--two">Выкладывайте всё, что накопилось в телефоне!</span></p>
       </div>
       <form class="editor__form" action="https://echo.htmlacademy.ru" method="post">
-        <div class="editor__wrapper-main container">
+        <div class="editor__wrapper-main">
           <picture class="editor__photo">
             <source type="../image/webp" media="(min-width: 960px)" srcset="../img/photo-road-desktop@1x.webp 1x, ../img/photo-road-desktop@2x.webp 2x">
             <source type="../image/webp" media="(min-width: 660px)" srcset="../img/photo-road-tablet@1x.webp 1x, ../img/photo-road-tablet@2x.webp 2x">
@@ -294,7 +294,7 @@
                 </div>
               </li>
               <li class="editor__item">
-                <button class="editor__button editor__button--setting editor__button--fill--active " type="button">
+                <button class="editor__button editor__button--setting editor__button--fill-active " type="button">
                   <span class="visually-hidden">Залить</span>
                   <svg class="editor__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
                     <path fill="none" d="M0,0h48v48H0V0z" />
@@ -363,7 +363,7 @@
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
         <a class="social-list__link social-list__link--twitter" href="#" aria-label="Твиттер">
-          <svg class="social-list__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+          <svg class="social-list__svg social-list__svg--twitter" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
             <g id="W6EeEF_1_">
               <g>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.485,3.074,0.263,3.685,1.151 c0.694-0.226,1.372-0.47,2.072-0.691c-0.004,0.841-0.538,1.478-0.883,1.727C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.976-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.32,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.654,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.787,11.283,0.153z" />
