--- a/source/index.html
+++ b/source/index.html
@@ -331,7 +331,7 @@
         <source type="../image/webp" srcset="../img/bg-map-mobile@1x.webp 1x, ../img/bg-map-mobile@2x.webp 2x">
         <source media="(min-width: 960px)" srcset="../img/bg-map-desktop@1x.jpg 1x, ../img/bg-map-desktop@2x.jpg 2x">
         <source media="(min-width: 660px)" srcset="../img/bg-map-tablet@1x.jpg 1x, ../img/bg-map-tablet@2x.jpg 2x">
-        <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="../img/bg-map-mobile@1x.jpg 1x, ../img/bg-map-mobile@2x.jpg 2x" alt="Фото c лесом">
+        <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="../img/bg-map-mobile@1x.jpg 1x, ../img/bg-map-mobile@2x.jpg 2x" alt="Карта">
       </picture>
     </section>
   </main>
